[tool.poetry]
name = "cl200a_controller"
version = "0.1.0"
description = ""
authors = ["Masashi Sode <masashi.sode@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
black = "^22"
flake8 = "^3.8.2"
isort = "^5.10.1"
autopep8 = "^1.5.2"
mypy = "^0.770"
pytest = "^6.1.2"
pylint = "^2.6.0"
pre-commit = "^2.19.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
testfixtures = "^6.18.5"
pandas = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 99
